[gd_scene load_steps=2 format=3 uid="uid://cr72s4043bsqu"]

[ext_resource type="Script" uid="uid://bulb5v85oy30i" path="res://scripts/ui/progress_statistics.gd" id="1_n7uu7"]

[node name="ProgressStatistics" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 357.0
grow_vertical = 2
script = ExtResource("1_n7uu7")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0.415686)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
text = "Параметры"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2

[node name="CursorAttributeList" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer3/VBoxContainer2/CursorAttributeList"]
layout_mode = 2
text = "КУРСОР"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer3/VBoxContainer2/CursorAttributeList"]
layout_mode = 2

[node name="CoreAttributeList" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer3/VBoxContainer2/CoreAttributeList"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer3/VBoxContainer2/CoreAttributeList"]
layout_mode = 2
text = "ЯДРО"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer3/VBoxContainer2/CoreAttributeList"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Рекорды"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="StatisticList" type="VBoxContainer" parent="MarginContainer/VBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
